[package]
name = "combo_repo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
handlebars = "6.3.1"
serde = {version="1.0.218", features=["derive"] }
serde_json = "1.0.139"
tokio = {version= "1.43.0", features=["rt-multi-thread"]}
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
tracing-subscriber = "0.3.19"
ts-rs = "10.1.0"
